# CodeMap

./: .gitignore  COPILOT.md  README.md  README.zh-CN.md  SKILL.md  install-vscode-copilot.cmd
.github/: copilot-instructions.md  copilot-instructions.strong.md
.github/plugin/: marketplace.json
CodeMap-main/: .gitignore
CodeMap-main/.serena/: project.yml
CodeMap-main/agents/: openai.yaml
CodeMap-main/mcp-server/: pyproject.toml
CodeMap-main/mcp-server/codemap_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CodeMap-main/rust-cli/: Cargo.toml
CodeMap-main/rust-cli/src/: impact.rs  query.rs
CodeMap-main/rust-cli/src/commands/: query.rs  status.rs
CodeMap-main/rust-cli/tests/: impact_compat.rs  query_compat.rs  scanner_compat.rs
CodeMap-main/scripts/: install-vscode-copilot.sh
copilot-plugin/.github/plugin/: plugin.json
copilot-plugin/commands/: impact.md  load.md  prompts.md  query.md  scan.md  update.md
copilot-plugin/skills/codemap/: SKILL.md
copilot-plugin/templates/: copilot-instructions.strong.md  settings.json
mcp-server/codemap_mcp/: __init__.py  server.py
rust-cli/src/commands/: impact.rs  scan.rs  update.rs
rust-cli/tests/: fixture_compat.rs  slicer_compat.rs
scripts/: install-vscode-copilot.ps1
