[project]
name = "codemap-mcp"
version = "0.2.6"
description = "MCP server for CodeMap AST graph scanning, querying, slicing, and impact analysis"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.26,<2",
]

[project.scripts]
codemap-mcp = "codemap_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
